# rmux

./: Cargo.toml  README.fr.md  README.ja.md  README.md  README.zh-CN.md  rmux.1
crates/ratatui-rmux/: Cargo.toml
crates/ratatui-rmux/src/: driver.rs  lib.rs  widget.rs
crates/ratatui-rmux/tests/: budget.rs  render.rs
crates/rmux-client/: Cargo.toml
crates/rmux-client/src/: attach.rs  attach_windows.rs  auto_start.rs  control.rs
crates/rmux-core/: Cargo.toml
crates/rmux-core/src/: buffers.rs  lib.rs  terminal_passthrough.rs  terminal_screen.rs  utf8.rs  vis.rs
crates/rmux-ipc/: Cargo.toml
crates/rmux-ipc/src/: endpoint.rs  lib.rs  listener.rs  stream.rs  windows_mutex.rs
crates/rmux-ipc/tests/: named_pipe_integration.rs
crates/rmux-os/: Cargo.toml
crates/rmux-os/src/: lib.rs  process.rs
crates/rmux-proto/: Cargo.toml
crates/rmux-proto/src/: frame_kind.rs  lib.rs  request.rs  response.rs
crates/rmux-pty/: Cargo.toml
crates/rmux-pty/src/: child.rs  (+3 more)
crates/rmux-sdk/: Cargo.toml
crates/rmux-server/: Cargo.toml
scripts/: ratatui-rmux-budget.sh  smoke-unix-deep.sh  tmux-compat-linux-check.py
spec/: runtime.yaml
src/: cli.rs  cli_response.rs
src/cli/: command_inventory.rs  command_runner.rs  dispatch.rs  session_commands.rs
src/cli_args_tests/: surface_docs.rs
tests/: canonical_workflow.rs  cli_pane_transfer_surface.rs  cli_surface.rs  cli_window_surface.rs  manpage_surface.rs  tmux_compat_harness.rs
tests/common/: cli.rs  mod.rs  tmux_compat.rs  workflow_fixture.rs
tests/tmux_compat_surface_matrix/: support.rs
xtask/src/: main.rs
(+188 files in other folders)
